# bases

./: README.md  pyproject.toml  setup.cfg
docs/: base-phi-design.md
src/numbases/: bases.py  serve_web.py  ui.py  web_ui.py
src/numbases/pages/: 2_Non_Integer_Bases.py
tests/: test_bases.py
