[metadata]
name = numbases
version = 0.1.0
description = Explore numerical bases, including non-integer bases

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7
web =
    streamlit>=1.30

[options.entry_points]
console_scripts =
    numbases-ui = numbases.ui:main
    numbases-web = numbases.serve_web:main
